<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>simzentrum</groupId>
  <artifactId>Simulator</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>
  
  <properties>
  	<maven.compiler.source>11</maven.compiler.source>
  	<maven.compiler.release>11</maven.compiler.release>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>WINDOWS-1252</project.build.sourceEncoding>    
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
  </properties>
  
  <dependencies>
  	<dependency>
  		<groupId>simzentrum</groupId>
  		<artifactId>simsystem</artifactId>
  		<version>[24.1,)</version>
  	</dependency>
  	<dependency>
  		<groupId>simzentrum</groupId>
  		<artifactId>simtools</artifactId>
  		<version>[24.1,)</version>
  	</dependency>
  	<!-- https://mvnrepository.com/artifact/com.googlecode.gettext-commons/gettext-commons -->
    <dependency>
  		<groupId>com.googlecode.gettext-commons</groupId>
  		<artifactId>gettext-commons</artifactId>
  		<version>0.9.8</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/fop -->
	<dependency>
    		<groupId>org.apache.xmlgraphics</groupId>
    		<artifactId>fop</artifactId>
    		<version>2.9</version>
	</dependency>	
	<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-codec -->
	<dependency>
    		<groupId>org.apache.xmlgraphics</groupId>
    		<artifactId>batik-codec</artifactId>
    		<version>1.17</version>
		<exclusions>
			<exclusion>
				<groupId>xml-apis</groupId>
				<artifactId>xml-apis</artifactId>
			</exclusion>
		</exclusions>
	</dependency>	
	<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
	<dependency>
    		<groupId>org.hsqldb</groupId>
    		<artifactId>hsqldb</artifactId>
    		<version>2.7.3</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird -->
	<dependency>
    		<groupId>org.firebirdsql.jdbc</groupId>
    		<artifactId>jaybird</artifactId>
    		<version>5.0.5.java11</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
	<dependency>
    		<groupId>org.mariadb.jdbc</groupId>
    		<artifactId>mariadb-java-client</artifactId>
    		<version>3.4.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.nanohttpd/nanohttpd -->
	<!--
	<dependency>
    		<groupId>org.nanohttpd</groupId>
    		<artifactId>nanohttpd</artifactId>
    		<version>2.3.1</version>
	</dependency>
	-->
	<!-- https://mvnrepository.com/artifact/com.gitee.l0km/nanohttpd -->
	<dependency>
    	<groupId>com.gitee.l0km</groupId>
    	<artifactId>nanohttpd</artifactId>
    	<version>2.3.4</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
	<dependency>
    		<groupId>org.postgresql</groupId>
    		<artifactId>postgresql</artifactId>
    		<version>42.7.4</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/net.sf.ucanaccess/ucanaccess -->
	<dependency>
    		<groupId>net.sf.ucanaccess</groupId>
    		<artifactId>ucanaccess</artifactId>
    		<version>5.0.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.mozilla/rhino -->
	<dependency>
    		<groupId>org.mozilla</groupId>
    		<artifactId>rhino</artifactId>
    		<version>1.7.15</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.fifesoft/rsyntaxtextarea -->
	<dependency>
    		<groupId>com.fifesoft</groupId>
    		<artifactId>rsyntaxtextarea</artifactId>
    		<version>3.5.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.fifesoft/autocomplete -->
	<dependency>
    		<groupId>com.fifesoft</groupId>
    		<artifactId>autocomplete</artifactId>
    		<version>3.3.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.fifesoft/spellchecker -->
	<dependency>
    		<groupId>com.fifesoft</groupId>
    		<artifactId>spellchecker</artifactId>
    		<version>3.3.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.gitlab.dumonts/hunspell -->
	<dependency>
    		<groupId>com.gitlab.dumonts</groupId>
    		<artifactId>hunspell</artifactId>
    		<version>2.1.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/de.erichseifert.vectorgraphics2d/VectorGraphics2D -->
	<dependency>
	    	<groupId>de.erichseifert.vectorgraphics2d</groupId>
    		<artifactId>VectorGraphics2D</artifactId>
    		<version>0.13</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.commonmark/commonmark -->
	<dependency>
    		<groupId>org.commonmark</groupId>
    		<artifactId>commonmark</artifactId>
    		<version>0.22.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.commonmark/commonmark-ext-autolink -->
	<dependency>
    		<groupId>org.commonmark</groupId>
    		<artifactId>commonmark-ext-autolink</artifactId>
    		<version>0.22.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.jdatepicker/jdatepicker -->
	<dependency>
    		<groupId>org.jdatepicker</groupId>
    		<artifactId>jdatepicker</artifactId>
    		<version>1.3.4</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.mqttv5.client -->
	<dependency>
    		<groupId>org.eclipse.paho</groupId>
    		<artifactId>org.eclipse.paho.mqttv5.client</artifactId>
    		<version>1.2.5</version>
	</dependency>
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-nop</artifactId>
		<version>2.0.16</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
	<dependency>
    	<groupId>org.eclipse.jgit</groupId>
    	<artifactId>org.eclipse.jgit</artifactId>
    	<version>6.10.0.202406032230-r</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.github.mwiede/jsch -->
	<dependency>
    	<groupId>com.github.mwiede</groupId>
    	<artifactId>jsch</artifactId>
    	<version>0.2.19</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit.ssh.jsch -->
	<dependency>
    	<groupId>org.eclipse.jgit</groupId>
    	<artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
    	<version>6.10.0.202406032230-r</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.json/json -->
	<dependency>
    	<groupId>org.json</groupId>
    	<artifactId>json</artifactId>
    	<version>20240303</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
	<dependency>
    		<groupId>com.formdev</groupId>
    		<artifactId>flatlaf</artifactId>
    		<version>3.5.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
	<!--
	<dependency>
    		<groupId>org.apache.derby</groupId>
    		<artifactId>derby</artifactId>
    		<version>10.17.1.0</version>
	</dependency>
	-->
	<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
	<dependency>
		<groupId>com.h2database</groupId>
		<artifactId>h2</artifactId>
		<version>2.3.232</version>
	</dependency>
	<!-- local -->
	<dependency>
		<groupId>JDDE.group</groupId>
		<artifactId>JDDE</artifactId>
		<version>2.1.0</version>
	</dependency>
  </dependencies>

  <build>
    <finalName>Simulator</finalName>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <excludes><exclude>**/*.java</exclude></excludes>
      </resource>
    </resources>
    
    <pluginManagement>
      <plugins>
          <plugin>
              <groupId>org.cyclonedx</groupId>
              <artifactId>cyclonedx-maven-plugin</artifactId>
              <version>2.7.0</version>
              <executions>
                <execution>
                    <id>cyclonedx-aggregate</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>makeAggregateBom</goal>
                    </goals>
                </execution>
              </executions>
              <configuration>
                <includeCompileScope>true</includeCompileScope>
                <includeProvidedScope>true</includeProvidedScope>
                <includeRuntimeScope>true</includeRuntimeScope>
                <includeSystemScope>true</includeSystemScope>
                <includeTestScope>false</includeTestScope>
              </configuration>
          </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.cyclonedx</groupId>
        <artifactId>cyclonedx-maven-plugin</artifactId>
        <inherited>false</inherited>
        <configuration>
			<skipAttach>true</skipAttach>			
		</configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.0.0-M1</version>
      	<executions>
      		<execution>
      			<id>install-external-JDDE-jar</id>
      			<phase>clean</phase>
      			<configuration>
      				<groupId>JDDE.group</groupId>
      				<artifactId>JDDE</artifactId>
      				<version>2.1.0</version>
      				<file>${project.basedir}/tools/JDDE/pretty-tools-JDDE.jar</file>
      				<packaging>jar</packaging>
      				<generatePom>true</generatePom>
      			</configuration>
      			<goals><goal>install-file</goal></goals>
      		</execution>
      		<execution>
		    	<id>default-install</id>		  
		    	<phase>none</phase>
          	</execution>
      	</executions>      	
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <archive>
            <addMavenDescriptor>false</addMavenDescriptor>
            <manifest>
				<addClasspath>true</addClasspath>
                <classpathLayoutType>custom</classpathLayoutType>
                <customClasspathLayout>libs/$${artifact.artifactId}.$${artifact.extension}</customClasspathLayout>
              	<mainClass>start.Main</mainClass>
            </manifest>
            <manifestEntries>
            		<Build-Time>${maven.build.timestamp}</Build-Time>
            	</manifestEntries>
          </archive>
        </configuration>
      </plugin>
	  
	  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/libs</outputDirectory>
              <stripClassifier>true</stripClassifier>
              <stripVersion>true</stripVersion>
              <overWriteReleases>false</overWriteReleases>
              <overWriteSnapshots>false</overWriteSnapshots>
              <overWriteIfNewer>true</overWriteIfNewer>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>  
</project>